Update Dockerfile to use Java 17 instead of Java 21 - Use G1GC instead of ZGC